--- a/portfolo/diggg/index.html
+++ b/portfolo/diggg/index.html
@@ -165,7 +165,7 @@
       </div>
       <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
         <li class="ms-3"><a class="text-muted" href="https://www.instagram.com/divya__sadhanala/?igshid=NmZiMzY2Mjc%3D"><svg class="bi" width="24" height="24"><i class="fa-brands fa-instagram"></i></i></svg></a></li>
-        <li class="ms-3"><a class="text-muted" href="https://github.com/divyatejasadhanala"><svg class="bi" width="24" height="24"><i class="fa-brands fa-github"></i></svg></a></li>
+        <li class="ms-3"><a class="text-muted" href="https://instagram.com/divya__sadhanala?igshid=YmMyMTA2M2Y="><svg class="bi" width="24" height="24"><i class="fa-brands fa-github"></i></svg></a></li>
         <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><i class="fa-brands fa-linkedin-in"></i></svg></a></li>
       </ul>
     </footer>
